Last link fixes

--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -146,7 +146,7 @@ Musicians or biologists (max 2)
 
 <a id="project3"></a>
 
-## Project 3: Game controlled by SSVEP paradigm using Blinker device (https://braintech.pl/blinker)
+## Project 3: Game controlled by SSVEP paradigm using Blinker device [https://braintech.pl/blinker](https://braintech.pl/blinker)
 
 #### Authors: Maciej Pawlisz, Marian Dovgialo
 
@@ -158,7 +158,7 @@ trzeba dac do leadu afiliacje, tytul naukowy, email
 
 Brain Computer Interface allows for control of a machine or a computer without input of your muscles, by sheer force of your mind. There are different forms of BCI’s, some of them use imagined hand movements some measure how relaxed or tense user is, some can distinguish imagined speech of a few sounds and some use users attention to different stimuli. Steady State Visual Evoked Potential based BCI use visual stimuli flickering at different frequencies to detect which one the user is paying the most attention to. This allows for example for a paralysed user in complete locked in state to mentally focus their attention on different flickering stimuli to show intent of control. Usually implemented versions of this BCI use 2-5 LED flickering at frequencies around 8-12 Hz. We present you 2 new devices to experiment with: <br>
 1. State of the art 24-bit 8 channel wireless EEG headset with water/saline based electrodes <br>
-2. Custom backlight display with 320 programmable backlight segments, allowing for accurate localised dimming and blinking at given frequencies. Frequency resolution 0.01 Hz, customisable blinking patterns: sine, square wave or user provided shape buffer In this project team of 3-6 will tackle a challenge to control an old school adventure game like Beneath a Steel Sky (freeware on https://www.scummvm.org/games/#sky ) using SSVEP based BCI using novel stimulation display. If successful, the project could be expanded to control the whole OS desktop which could upgrade assistive technologies for people suffering from paralysis or trapped in a locked in state. 
+2. Custom backlight display with 320 programmable backlight segments, allowing for accurate localised dimming and blinking at given frequencies. Frequency resolution 0.01 Hz, customisable blinking patterns: sine, square wave or user provided shape buffer In this project team of 3-6 will tackle a challenge to control an old school adventure game like Beneath a Steel Sky (freeware on [https://www.scummvm.org/games/#sky](https://www.scummvm.org/games/#sky)) using SSVEP based BCI using novel stimulation display. If successful, the project could be expanded to control the whole OS desktop which could upgrade assistive technologies for people suffering from paralysis or trapped in a locked in state. 
 
 **Programming languages that are going to be used in the project**:
 
@@ -166,12 +166,12 @@ Python, JavaScript
 
 **A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
 
-1. Mandatory: 
+1. Mandatory: <br>
 ○ Knowledge in Python programming, Linux <br>
 ○ Laptop running x86_64 bit Linux with Python 3.6 (for example Ubuntu 18.04.3 LTS) <br>
 ○ Laptop with HDMI output <br>
 ○ Be ready to get your hair wet <br> 
-2. Optional: 
+2. Optional: <br>
 ○ Knowledge of GUI programming: PyQt, PySide, PyGame or other <br>
 ○ Familiarity with machine learning, digital signal processing <br>
 ○ Knowledge of human input device events simulation - getting screenshots, simulating keypresses and mouse clicks from Python <br>
@@ -214,13 +214,13 @@ trzeba dac do leadu afiliacje, tytul naukowy, email
 Classification errors take place everywhere - from machine learning classifiers, through medical decisions, to juridical verdicts. Very often the options are not symmetric and there is a trade-off on how we balance different kinds of errors (e.g. sentencing an innocent person vs letting free a guilty one).   
 
 In this project, we develop interactive explanations of different error measures (e.g. precision and recall) with concrete examples, showing:
-1. what do they represent,
-2. where they are insightful or misleading.
+1. What do they represent,
+2. Where they are insightful or misleading.
 
 The project will have three main parts (you may take part in one, two or all of these activities):
-1. writing interactive stories with concrete examples
-2. designing data visualizations
-3. developing a Vue.js application
+1. Writing interactive stories with concrete examples
+2. Designing data visualizations
+3. Developing a Vue.js application
 
 As a result, we want to extend a project "Which ML are you?" [https://github.com/stared/which-ml-are-you](https://github.com/stared/which-ml-are-you) which can be a powerful tool for learning how to use and interpret common information retrieval metrics.
 
