--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -7,11 +7,11 @@ color: black
 #  Participant Registration
 
 
-## **Participant Registration opens SOON**.
+<## **Participant Registration opens SOON**.>
 
-<!--
-### Registration form is available [here](https://docs.google.com/forms/d/e/1FAIpQLSddlhiyNjpdJ6s_qCEPAhR0_K2jW06Q4lktpAHW_SXzROIAXw/viewform)
--->
+!--
+### Registration form is available [here](https://forms.gle/TZdae6npgRFQ9DKD9)
+--
 
 Registration will take place in three rounds and there will be small registration fee (to cover the catering during the event) for the project participants:
 * **EARLY** -> *21.01* - *07.02* -> 100 PLN / 25 EUR
