--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -7,7 +7,9 @@ color: black
 #  Participant Registration
 
 
-<!-- ## **Participant Registration opens SOON**. -->
+<!--
+ ## **Participant Registration opens SOON**. 
+ -->
 
 
 ### Registration form is available [here](https://forms.gle/TZdae6npgRFQ9DKD9)
